--- a/proceedings/jet_sub.tex
+++ b/proceedings/jet_sub.tex
@@ -61,7 +61,7 @@
 
 \section{Jet Studies: Four decades of gluons\protect\footnote{Section coordinators: S.~Marzani and B.~Nachman.}$^{,}$~\protect\footnote{Contributing authors: S.~Amoroso, P.~Azzurri, H.~Brooks, S.~Forte, P.~Gras, Y.~Haddad, J.~Huston, A.~Larkoski, M.~Le Blanc, P.~Loch, K.~Long, E.~Metodiev, D.~Napoletano, S.~Prestel, P.~Richardson, F.~Ringer, J.~Roloff, D.~Soper, G.~Soyez, V.~Theeuwes.}}
 
-Studies related to gluon jets have played a key role in particle and nuclear physics since their discovery at PETRA exactly (to the day!) \textbf{four decades} prior to the 2019 Les Houches workshop.  This section investigates gluon fragmentation at the LHC, covering nearly \textbf{four decades} in energy scales.  Low energy scales involving gluon (sub)jets are studied from the point of view of hadronization and Monte Carlo tuning.  Higher-order effects in parton shower programs are investigated using deep learning.  Gluon jet rejection is considered in the context of vector boson fusion/scattering processes.  One of the main studies at this Les Houches was a study about the usefulness of a gluon jet differential cross section measurement in the context of parton distribution functions.  Gluon jet identification was also briefly discussed for searches at the highest energies accessible at the LHC.
+Studies related to gluon jets have played a key role in particle and nuclear physics since their discovery at PETRA exactly (to the day!) \textbf{four decades} prior to the 2019 Les Houches workshop.  This section investigates gluon fragmentation at the LHC, covering nearly \textbf{four decades} in energy scales.  Low energy scales involving gluon (sub)jets are studied from the point of view of hadronization and Monte Carlo tuning.  Higher-order effects in parton shower programs are investigated using deep learning.  Gluon jet rejection is considered in the context of vector boson fusion/scattering processes.  One of the main studies at this Les Houches was an investigation into the usefulness of a gluon jet differential cross section measurement in the context of parton distribution functions.  Gluon jet identification was also briefly discussed for searches at the highest energies accessible at the LHC.
 
 \subsection{Introduction}
 \label{sec:jets:intro}
@@ -70,13 +70,13 @@ Jets are collimated sprays of hadrons that emerge from high energy quarks and gl
 
 At the lowest energies, jets are dominated by non-perturbative effects.  While there has been significant progress in understanding jet formation when fixed-order or resummed perturbation theory is accurate, there has been much less progress outside these regions of phase space.  While such contributions are small for many observables of interest, they are relevant for any precision program involving hadronic final states.  One example is the determination of the strong coupling constant, $\alpha_s$, from hadronic event shapes~\cite{Abbate:2010xh,Hoang:2015hka,TheALEPHCollaboration2004,DELPHICollaboration1997,Abdallah:2004xe,Biebel:1999zt,Abbiendi:2004qz,Buskulic:1992hq}.   After lattice determinations, the most precise extractions of $\alpha_s$ use thrust and the $C$-parameter from $e^+e^-$ data.  One of the biggest challenges of this extraction is that the non-perturbative corrections are nearly degenerate with changes to $\alpha_s$~\cite{Abbate:2010xh}.  The 2017 Les Houches report on jets studied the possibility of using jet substructure at the LHC to determine $\alpha_s$~\cite{Bendavid:2018nar}.  A key ingredient to this study is jet grooming, which is a set of tools to systematically remove soft and wide angle radiation within a jet.  Well-designed grooming algorithms allow for precise theory predictions of certain observables in part because the magnitude and the onset of non-perturbative effects can be parametrically suppressed with respect to the un-groomed case.  While jet grooming may not be enough to eliminate the need to estimate non-perturbative effects, grooming may provide a unique opportunity to isolate these effects for further study.   While the perturbative regions of phase space have received significant attention from the community~\cite{Frye:2016aiz,Frye:2016okc,Marzani:2017mva,Marzani:2017kqd,Kang:2018vgn,Kang:2018jwa,Baron:2018nfz,Kardos:2018kth}, the non-perturbative regions have only recently been investigated~\cite{Hoang:2019ceu}.   One of the goals of this report is to explore the non-perturbative region of groomed jets using phenomenological tools for guidance. 
 
-Both perturbative and non-perturbative regions of phase space at low energy can be important inputs to Parton Shower Monte Carlo (PSMC) parameter tuning.  In particular, there is a need for data enriched in gluon jets as many of the existing tunes are either based solely on or are anchored based on $e^+e^-$ data.  While those data are free from many nuisances like the underlying event, they are dominated by quark jets.  Various tuning campaigns at the LHC have found potential sources of tension between tunes that use jet substructure from the LHC and those that use jet and event shapes from LEP~\cite{ATL-PHYS-PUB-2014-021,Aad:2016oit}.  It is therefore critical to collect new measurements with unique and overlapping sensitivity to a variety of phase space regions.  The community repository for storing measurements is HepData~\cite{Buckley:2010jn,Maguire:2017ypu} and the standard for encoding an analysis for reinterpretation is \textsc{Rivet}~\cite{Buckley:2010ar}.  In the preparation of this report, new routines have been added to the existing databases and a list of jet substructure measurements from the LHC experiments has been tabulated.
+Both perturbative and non-perturbative regions of phase space at low energy can be important inputs to Parton Shower Monte Carlo (PSMC) parameter tuning.  In particular, there is a need for data enriched in gluon jets as many of the existing tunes are either based solely on or are anchored based on $e^+e^-$ data.  While those data are free from many nuisances like the underlying event, they are dominated by quark jets.  Various tuning campaigns at the LHC have found potential sources of tension between tunes that use jet substructure from the LHC and those that use jet and event shapes from LEP~\cite{ATL-PHYS-PUB-2014-021,Aad:2016oit}.  It is therefore critical to collect new measurements with unique and overlapping sensitivity to a variety of phase space regions.  The community repository for storing measurements is \textsc{HepData}~\cite{Buckley:2010jn,Maguire:2017ypu} and the standard for encoding an analysis for reinterpretation is \textsc{Rivet}~\cite{Buckley:2010ar}.  In the preparation of this report, new routines have been added to the existing databases and a list of jet substructure measurements from the LHC experiments has been tabulated.
 
-While many aspects of PSMC programs are built on phenomenological models that must be tuned to data, there are also a variety of components that are based on fundamental aspects of strong interactions and can be systematically improved.  Various MC programs such as \textsc{Dire}, \textsc{Vincia}, and \textsc{Deductor} include various subleading resummation, helicity, and color corrections.  In particular, the \textsc{Dire} program, which is a plugin to both \textsc{Pythia} or \textsc{Sherpa} now includes all of the next-to-leading order components of the QCD splitting functions including the triple-collinear and double-soft splittings.   The 2017 Les Houches report briefly discussed an investigation of standard jet substructure observables (such as the two-prong tagger $N_2$~\cite{Moult:2016cvt}) to the triple collinear splitting function~\cite{Bendavid:2018nar}.  A non-exhaustive list of such observables showed no sensitivity to this splitting function.  In order to know if any jet observable is sensitive to the extended physics modelling, deep neural network classifiers were constructed using the full observable jet phase space (kinematics and particle types).   This study confirmed that the triple-collinear splitting function is essentially non-observable, but the neural networks were able to significantly detect the double-soft splitting function.  Future work is required to construct simple observables that may become near-future measurements for probing this in data.
+While many aspects of PSMC programs are built on phenomenological models that must be tuned to data, there are also a variety of components that are based on fundamental aspects of strong interactions and can be systematically improved.  Various MC programs such as \textsc{Dire}~\cite{Hoche:2015sya}, \textsc{Vincia}~\cite{Giele:2007di}, and \textsc{Deductor}~\cite{Nagy:2014mqa} include various subleading resummation, helicity, and color corrections.  In particular, the \textsc{Dire} program, which is a plugin to both \textsc{Pythia}~\cite{Sjostrand:2014zea,Sjostrand:2007gs} or \textsc{Sherpa}~\cite{Gleisberg:2008ta,Bothmann:2019yzt} now includes all of the next-to-leading order components of the QCD splitting functions including the triple-collinear and double-soft splittings.   The 2017 Les Houches report briefly discussed an investigation of standard jet substructure observables (such as the two-prong tagger $N_2$~\cite{Moult:2016cvt}) to the triple collinear splitting function~\cite{Bendavid:2018nar}.  A non-exhaustive list of such observables showed no sensitivity to this splitting function.  In order to know if any jet observable is sensitive to the extended physics modelling, deep neural network classifiers were constructed using the full observable jet phase space (kinematics and particle types).   This study confirmed that the triple-collinear splitting function is essentially non-observable, but the neural networks were able to significantly detect the double-soft splitting function.  Future work is required to construct simple observables that may become near-future measurements for probing this in data.
 
 Jet classification techniques have been used for a variety of other tasks, including quark versus gluon (q/g) jet tagging.  In the context of Les Houches 2019, the focus of q/g tagging was on the isolation of vector boson fusion (VBF) and vector boson scattering (VBS) processes.  These processes are distinguished in part by two moderate $p_T$ forward quark jets.  In the context of Higgs production, quark/gluon tagging is useful both for separating the Higgs from other Standard Model backgrounds as well as separating different Higgs production modes.   The usefulness of q/g tagging to distinguish the gluon fusion (ggH) and VBF Higgs production modes was first investigated by CMS~\cite{Khachatryan:2015bnx}.  This report will show additional studies to understand the interplay between q/g tagging and other analysis selections such as requiring a large dijet invariant mass ($m_{jj}$).
 
-While q/g tagging has traditionally been used to \textit{reject quarks}, there may also be a physics case for tagging gluons.  One possibility in particular is the possibility of using gluon jets to constrain the gluon parton distribution function (PDF).  The gluon PDF has a large uncertainty at high $x$ ($m_{jj}\sim 1$ TeV) because the existing inclusive jet data are dominated by $qq$ initial states and $gg$ constraints from $t\bar{t}$ production become statistically limited.  What if one could directly measure the $gg$ reaction cross section?  The first step in answering this question is to establish a strong correlation between the initial and final state flavors.  This means that gluon tagging the final state will bias the initial state to be more gluonic.   The second step is to identify the tradeoff between tagging performance and uncertainties.  If the current PDF uncertainty can be made larger than the statistical and systematic uncertainties, new data would be useful in constraining the gluon PDF.  Lastly, it is important that the gluon tagging strategy is theoretically well-understood so that it can be simultaneously calculated with the $p_T$ spectrum as input to the PDF fits.  For this purpose, a new observable is considered - the \textit{Les Houches multiplicity} $n_\text{LH}$, first proposed in Ref.~\cite{Marzani:2019hun} as a variation on the iterative SoftDrop multiplicity~\cite{Frye:2017yrw}.
+While q/g tagging has traditionally been used to \textit{reject quarks}, there may also be a physics case for \textit{tagging gluons}.  One possibility in particular is the prospect of using gluon jets to constrain the gluon parton distribution function (PDF).  The gluon PDF has a large uncertainty at high $x$ ($m_{jj}\sim 1$~TeV) because the existing inclusive jet data are dominated by $qq$ initial states and $gg$ constraints from $t\bar{t}$ production become statistically limited.  What if one could directly measure the $gg$ reaction cross section?  The first step in answering this question is to establish a strong correlation between the initial and final state flavors.  This means that gluon tagging the final state will bias the initial state to be more gluonic.   The second step is to identify the tradeoff between tagging performance and uncertainties.  If the current PDF uncertainty can be made larger than the statistical and systematic uncertainties, new data would be useful in constraining the gluon PDF.  Lastly, it is important that the gluon tagging strategy is theoretically well-understood so that it can be simultaneously calculated with the $p_T$ spectrum as input to the PDF fits.  For this purpose, a new observable is considered - the \textit{Les Houches multiplicity} $n_\text{LH}$, first proposed in Ref.~\cite{Marzani:2019hun} as a variation on the iterative SoftDrop multiplicity~\cite{Frye:2017yrw}.
 
 At the kinematic limit of LHC jets, gluon tagging may also have an important role for searches for new particles.  While not studied extensively at Les Houches, there was a general brainstorming session for gluon tagging applications and one promising example is the search for $X\rightarrow gg$.  At high $m_{jj}$, the SM background is dominated by valence quark scattering.  Furthermore, gluon tagging is more useful at high $p_T$ where counting observables like $n_{LH}$ have a better q/g tagging performance.  For these reasons, gluon tagging has an interesting potential to increase the sensitivity of the high mass dijet search.
 %https://arxiv.org/pdf/1912.03511.pdf
@@ -86,7 +86,7 @@ This remainder of this chapter is organized from low to high energy.  Section~\r
 \subsection{Non-Perturbative effects at low jet mass}
 \label{sec:jets:np}
 
-Jet grooming is the systematic removal of soft and wide-angle emission from inside a jet.  Advances in jet grooming have resulted in algorithms like SoftDrop and the modified mass drop tagger (mMDT)~\cite{Larkoski:2014wba,Dasgupta:2013ihk} that are amenable to high order resummation.   Both ATLAS~\cite{Aaboud:2017qwh,Aad:2019vyi} and CMS~\cite{Sirunyan:2018xdh} have measured the SoftDrop jet mass and compared the differential cross section with theoretical calculations~\cite{Frye:2016aiz,Frye:2016okc,Marzani:2017mva,Marzani:2017kqd,Kang:2018vgn,Kang:2018jwa,Baron:2018nfz,Kardos:2018kth}.  As the level of both experimental and theoretical precision improves, it is natural to consider what are the next challenges.  The reconstruction and prediction of jet masses near the non-perturbative regime $k_T\lesssim \Lambda_\text{QCD}$ is becoming just as if not more important than improving the experimental and theoretical precision at medium and high masses.
+Jet grooming is the systematic removal of soft and wide-angle emission from inside a jet.  Advances in jet grooming have resulted in algorithms like SoftDrop and the modified mass drop tagger (mMDT)~\cite{Larkoski:2014wba,Dasgupta:2013ihk} that are amenable to high order resummation.   Both ATLAS~\cite{Aaboud:2017qwh,Aad:2019vyi} and CMS~\cite{Sirunyan:2018xdh} have measured the SoftDrop jet mass and compared the differential cross section with theoretical calculations~\cite{Frye:2016aiz,Frye:2016okc,Marzani:2017mva,Marzani:2017kqd,Kang:2018vgn,Kang:2018jwa,Baron:2018nfz,Kardos:2018kth}.  As the level of both experimental and theoretical precision improves, it is natural to consider what are the next challenges.  The reconstruction and prediction of jet masses near the non-perturbative regime $k_T\lesssim \Lambda_\text{QCD}$ is becoming comparably important to improving the experimental and theoretical precision at medium and high masses.
 
 At the same time, jet grooming also offers an exciting opportunity to study non-perturbative effects in isolation.  In particular, non-perturbative corrections to the jet mass are localized after jet grooming.  This is illustrated in Fig.~\ref{fig:jets:np:illustration}.  Turning on and off non-perturbative modeling in \textsc{Pythia} lead to an $\mathcal{O}(1)$ effect in the differential cross section, but only at low jet masses.  The goal of this section is to use phenomenological tools to investigate this structure in more detail.  This region of the phase space is particularly hard to measure experimentally and has thus far largely been avoided.  However, innovations in mass reconstruction will improve the precision at low mass and this region may be well-suited for non-perturbative studies including phenomenological model tuning.  Analytic approaches to also probe this region are also an important complement to these studies and have begun with the recent work in Ref.~\cite{Hoang:2019ceu}.
 
@@ -97,7 +97,7 @@ At the same time, jet grooming also offers an exciting opportunity to study non-
 \label{fig:jets:np:illustration}
 \end{figure}
 
-Figure~\ref{fig:jets:np:qg} shows the groomed jet mass predicted for dijet events using \textsc{Pythia} and \textsc{Herwig} and separated into quark jets and gluon jets.  The SoftDrop grooming algorithm is used with the most aggressive grooming parameter $\beta=0$ (this also corresponds to mMDT).  The leading logarithm prediction for the differential cross section in the intermediate mass region ($-3\lesssim\log_{10}(m^2/p_T^2)\lesssim -2$) is a roughly linear distribution, the slope of which is different for quarks and gluons and it is nearly flat for quarks because of the value $z_\text{cut}=0.1$ chosen in this study~\cite{Dasgupta:2013ihk}. In the absence of non-perturbative effects, these trends would continue down to arbitrarily small masses. Interestingly, the non-perturbative corrections are very different for quarks and gluons, with a much larger bump for quarks.  Furthermore, the corrections for \textsc{Pythia}and \textsc{Herwig} gluons are qualitatively different, with a clear peak for \textsc{Pythia} gluons and the absence of a peak for \textsc{Herwig}.
+Figure~\ref{fig:jets:np:qg} shows the groomed jet mass predicted for dijet events using \textsc{Pythia} and \textsc{Herwig}~\cite{Bahr:2008pv,Bellm:2015jjp,Bellm:2019zci} and separated into quark jets and gluon jets.  The SoftDrop grooming algorithm is used with the most aggressive grooming parameter $\beta=0$ (this also corresponds to mMDT).  The leading logarithm prediction for the differential cross section in the intermediate mass region ($-3\lesssim\log_{10}(m^2/p_T^2)\lesssim -2$) is a roughly linear distribution, the slope of which is different for quarks and gluons and it is nearly flat for quarks because of the value $z_\text{cut}=0.1$ chosen in this study~\cite{Dasgupta:2013ihk}. In the absence of non-perturbative effects, these trends would continue down to arbitrarily small masses. Interestingly, the non-perturbative corrections are very different for quarks and gluons, with a much larger bump for quarks.  Furthermore, the corrections for \textsc{Pythia}and \textsc{Herwig} gluons are qualitatively different, with a clear peak for \textsc{Pythia} gluons and the absence of a peak for \textsc{Herwig}.
 
 \begin{figure}[h!]
 \centering
@@ -111,7 +111,7 @@ The large model-dependence for gluon jets in Fig.~\ref{fig:jets:np:qg} motivated
 \begin{figure}[h!]
 \centering
 \includegraphics[width=0.95\textwidth]{figs/NPbumptracks.pdf}
-\caption{The binned differential cross-section for the groomed jet mass using various Monte Carlo models and for all particle (left) and charged-particles only (right).  The vertical line with the arrow in the left plot shows the bin boundary for the lowest mass bin in the recent ATLAS measurements~\cite{Aaboud:2017qwh,Aad:2019vyi}.}
+\caption{The binned differential cross-section for the groomed jet mass using various Monte Carlo models and for all particle (left) and charged-particles only (right).  The vertical line with the arrow in the left plot shows the bin boundary for the lowest mass bin in the recent ATLAS measurements~\cite{Aaboud:2017qwh,Aad:2019vyi}.  Gluon jets are simulated by generating $Z+g$.}
 \label{fig:jets:np:tracks}
 \end{figure}
 
