--- a/proceedings/lh2019.bib
+++ b/proceedings/lh2019.bib
@@ -1,7 +1,36 @@
 % Encoding: UTF-8
 %% This BibTeX bibliography file was created using BibDesk.
 %% http://bibdesk.sourceforge.net/
+@article{Bellm:2015jjp,
+      author         = "Bellm, Johannes and others",
+      title          = "{Herwig 7.0/Herwig++ 3.0 release note}",
+      journal        = "Eur. Phys. J.",
+      volume         = "C76",
+      year           = "2016",
+      number         = "4",
+      pages          = "196",
+      doi            = "10.1140/epjc/s10052-016-4018-8",
+      eprint         = "1512.01178",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      reportNumber   = "CERN-PH-TH-2015-289, MAN-HEP-2015-15, IFJPAN-IV-2015-13,
+                        KA-TP-18-2015, DCPT-15-142, MCNET-15-28, IPPP-15-71,
+                        HERWIG-2015-01",
+      SLACcitation   = "%%CITATION = ARXIV:1512.01178;%%"
+}
 
+@article{Bellm:2019zci,
+      author         = "Bellm, Johannes and others",
+      title          = "{Herwig 7.2 Release Note}",
+      year           = "2019",
+      eprint         = "1912.06509",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      reportNumber   = "MAN/HEP/2019/011, CERN-TH-2019-213, IFJPAN-IV-2019-18,
+                        HERWIG-2019-02, UWTHPH-19-36, KA-TP-24-2019, LU-TP 19-57,
+                        MCnet-19-28, IPPP/19/91",
+      SLACcitation   = "%%CITATION = ARXIV:1912.06509;%%"
+}
 
 @book{Marzani:2019hun,
     author = "Marzani, Simone and Soyez, Gregory and Spannowsky, Michael",
@@ -13,6 +42,121 @@
     title = "Looking inside jets: an introduction to jet substructure and boosted-object phenomenology",
     volume = "958",
     year = "2019"
+}
+@article{Bahr:2008pv,
+      author         = "Bahr, M. and others",
+      title          = "{Herwig++ Physics and Manual}",
+      journal        = "Eur. Phys. J.",
+      volume         = "C58",
+      year           = "2008",
+      pages          = "639-707",
+      doi            = "10.1140/epjc/s10052-008-0798-9",
+      eprint         = "0803.0883",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      reportNumber   = "CERN-PH-TH-2008-038, CAVENDISH-HEP-08-03, KA-TP-05-2008,
+                        DCPT-08-22, IPPP-08-11, CP3-08-05",
+      SLACcitation   = "%%CITATION = ARXIV:0803.0883;%%"
+}
+
+@article{Bothmann:2019yzt,
+      author         = "Bothmann, Enrico and others",
+      title          = "{Event Generation with Sherpa 2.2}",
+      collaboration  = "Sherpa",
+      journal        = "SciPost Phys.",
+      volume         = "7",
+      year           = "2019",
+      number         = "3",
+      pages          = "034",
+      doi            = "10.21468/SciPostPhys.7.3.034",
+      eprint         = "1905.09127",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      reportNumber   = "FERMILAB-PUB-19-218-T, SLAC-PUB-17433, IPPP/19/42,
+                        MCNET-19-11",
+      SLACcitation   = "%%CITATION = ARXIV:1905.09127;%%"
+}
+
+@article{Gleisberg:2008ta,
+      author         = "Gleisberg, T. and Hoeche, Stefan. and Krauss, F. and
+                        Schonherr, M. and Schumann, S. and Siegert, F. and Winter,
+                        J.",
+      title          = "{Event generation with SHERPA 1.1}",
+      journal        = "JHEP",
+      volume         = "02",
+      year           = "2009",
+      pages          = "007",
+      doi            = "10.1088/1126-6708/2009/02/007",
+      eprint         = "0811.4622",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      reportNumber   = "FERMILAB-PUB-08-477-T, SLAC-PUB-13420, ZU-TH-17-08,
+                        DCPT-08-138, IPPP-08-69, EDINBURGH-2008-30, MCNET-08-14",
+      SLACcitation   = "%%CITATION = ARXIV:0811.4622;%%"
+}
+@article{Sjostrand:2007gs,
+      author         = "Sjostrand, Torbjorn and Mrenna, Stephen and Skands, Peter
+                        Z.",
+      title          = "{A Brief Introduction to PYTHIA 8.1}",
+      journal        = "Comput. Phys. Commun.",
+      volume         = "178",
+      year           = "2008",
+      pages          = "852-867",
+      doi            = "10.1016/j.cpc.2008.01.036",
+      eprint         = "0710.3820",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      reportNumber   = "CERN-LCGAPP-2007-04, LU-TP-07-28,
+                        FERMILAB-PUB-07-512-CD-T",
+      SLACcitation   = "%%CITATION = ARXIV:0710.3820;%%"
+}
+
+@article{Nagy:2014mqa,
+      author         = "Nagy, Zoltan and Soper, Davison E.",
+      title          = "{A parton shower based on factorization of the quantum
+                        density matrix}",
+      journal        = "JHEP",
+      volume         = "06",
+      year           = "2014",
+      pages          = "097",
+      doi            = "10.1007/JHEP06(2014)097",
+      eprint         = "1401.6364",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      reportNumber   = "DESY-13-241",
+      SLACcitation   = "%%CITATION = ARXIV:1401.6364;%%"
+}
+
+@article{Giele:2007di,
+      author         = "Giele, Walter T. and Kosower, David A. and Skands, Peter
+                        Z.",
+      title          = "{A simple shower and matching algorithm}",
+      journal        = "Phys. Rev.",
+      volume         = "D78",
+      year           = "2008",
+      pages          = "014026",
+      doi            = "10.1103/PhysRevD.78.014026",
+      eprint         = "0707.3652",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      reportNumber   = "FERMILAB-PUB-07-160-T, SACLAY-SPHT-T07-107",
+      SLACcitation   = "%%CITATION = ARXIV:0707.3652;%%"
+}
+
+@article{Hoche:2015sya,
+      author         = "Hoche, Stefan and Prestel, Stefan",
+      title          = "{The midpoint between dipole and parton showers}",
+      journal        = "Eur. Phys. J.",
+      volume         = "C75",
+      year           = "2015",
+      number         = "9",
+      pages          = "461",
+      doi            = "10.1140/epjc/s10052-015-3684-2",
+      eprint         = "1506.05057",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      reportNumber   = "SLAC-PUB-16304, MCNET-15-13",
+      SLACcitation   = "%%CITATION = ARXIV:1506.05057;%%"
 }
 
 @article{Larkoski:2017jix,
