--- a/proceedings/tuning.tex
+++ b/proceedings/tuning.tex
@@ -63,6 +63,7 @@ While the $p_T$-binned result in principle provides more access to information s
 \includegraphics[width=0.49\textwidth]{figs/RivetPlotsMassOnly/ATLAS_2019_I1724098/d23-x01-y01.pdf} \hfill
 \includegraphics[width=0.49\textwidth]{figs/RivetPlotsMassOnly/ATLAS_2019_I1724098/d27-x01-y01.pdf} \hfill
 \end{center}
+\caption{Examples of results obtained with the mass-only tune.}
 \label{massOnlyTune}
 \end{figure}
 
@@ -83,7 +84,7 @@ and so they likely need to be combined with other measurements for full accuracy
 \includegraphics[width=0.49\textwidth]{figs/RivetPlotsFinal/ATLAS_2019_I1724098/d23-x01-y01.pdf} \hfill
 \includegraphics[width=0.49\textwidth]{figs/RivetPlotsFinal/ATLAS_2019_I1724098/d27-x01-y01.pdf} \hfill
 \end{center}
-\label{allTune}
+\caption{Examples of results obtained with the tune using six jet substructure measurements.}\label{allTune}
 \end{figure}
 
 
